css/output.css
/* ... */
.container {
  width: 100%;
}

@media (min-width: 640px) {
  .container {
    max-width: 640px;
  }
}

@media (min-width: 768px) {
  .container {
    max-width: 768px;
  }
}

@media (min-width: 1024px) {
  .container {
    max-width: 1024px;
  }
}

@media (min-width: 1280px) {
  .container {
    max-width: 1280px;
  }
}

@media (min-width: 1536px) {
  .container {
    max-width: 1536px;
  }
}

.mx-auto {
  margin-left: auto;
  margin-right: auto;
}

.mb-10 {
  margin-bottom: 2.5rem;
}

.mb-5 {
  margin-bottom: 1.25rem;
}

.flex {
  display: flex;
}

.flex-row {
  flex-direction: row;
}

.items-center {
  align-items: center;
}

.justify-between {
  justify-content: space-between;
}

.pr-5 {
  padding-right: 1.25rem;
}

.text-center {
  text-align: center;
}

.text-sm {
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.font-semibold {
  font-weight: 600;
}

.text-btnColor {
  --tw-text-opacity: 1;
  color: rgb(240 189 106 / var(--tw-text-opacity));
}

.text-slate-500 {
  --tw-text-opacity: 1;
  color: rgb(100 116 139 / var(--tw-text-opacity));
}

.closed {
  height: 0px;
  overflow: hidden;
}

@media (min-width: 1024px) {
  .closed {
    height: auto;
    overflow: visible;
  }
}

.opened {
  height: 90vh;
  overflow: visible;
}

body {
  --tw-bg-opacity: 1;
  background-color: rgb(248 250 252 / var(--tw-bg-opacity));
}

.container {
  max-width: 100%;
}

header {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding-left: 1.25rem;
  padding-right: 1.25rem;
  padding-bottom: 1.25rem;
}

@media (min-width: 1024px) {
  header {
    flex-direction: row;
    align-items: center;
    padding-left: 4rem;
    padding-right: 4rem;
    padding-bottom: 4rem;
  }
}

.navLogo {
  height: 4rem;
}

.hamburger {
  height: 2.25rem;
}

@media (min-width: 1024px) {
  .hamburger {
    display: none;
  }
}

.navbar {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1.75rem;
  font-weight: 600;
  transition-property: all;
  transition-duration: 500ms;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}

@media (min-width: 1024px) {
  .navbar {
    flex-direction: row;
  }
}

.navList {
  margin-top: 4rem;
  display: flex;
  flex-direction: column;
  gap: 4rem;
}

@media (min-width: 1024px) {
  .navList {
    margin-top: 0px;
    flex-direction: row;
    gap: 1.75rem;
  }
}

.navText {
  font-size: 1.25rem;
  line-height: 1.75rem;
  --tw-text-opacity: 1;
  color: rgb(100 116 139 / var(--tw-text-opacity));
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}

.navText:hover {
  --tw-text-opacity: 1;
  color: rgb(0 0 0 / var(--tw-text-opacity));
}

@media (min-width: 1024px) {
  .navText {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

.navBtn {
  display: none;
  border-radius: 0.5rem;
  border-width: 1px;
  --tw-border-opacity: 1;
  border-color: rgb(249 115 22 / var(--tw-border-opacity));
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  --tw-text-opacity: 1;
  color: rgb(249 115 22 / var(--tw-text-opacity));
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}

.navBtn:hover {
  --tw-bg-opacity: 1;
  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
}

@media (min-width: 1024px) {
  .navBtn {
    display: block;
  }
}

/*SECTION 1*/

.section1 {
  display: flex;
  flex-direction: column;
  padding-left: 1.25rem;
}

@media (min-width: 1024px) {
  .section1 {
    flex-direction: row;
    padding-left: 4rem;
  }

  .textSection {
    width: 50%;
  }

  .imgSection {
    width: 50%;
  }
}

.section1Heading {
  margin-bottom: 2.5rem;
  font-family: Space Grotesk, sans-serif;
  font-size: 1.875rem;
  line-height: 2.25rem;
  font-weight: 700;
}

@media (min-width: 1024px) {
  .section1Heading {
    font-size: 3rem;
    line-height: 1;
  }
}

.sectionText {
  --tw-text-opacity: 1;
  color: rgb(100 116 139 / var(--tw-text-opacity));
}

.truck {
  margin: 0px;
  height: 450px;
  width: 650px;
}

.btn {
  border-radius: 0.5rem;
  --tw-bg-opacity: 1;
  background-color: rgb(240 189 106 / var(--tw-bg-opacity));
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  font-weight: 600;
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}
/* ... */

